# csprojtool

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
csprojtool/: Cargo.toml
csprojtool/src/: cli.rs  csproj.rs  dependency_graph.rs  list.rs  list_projects.rs  main.rs  move_command.rs  path_extensions.rs  post_migration_cleanup.rs  sln.rs  utils.rs  validate_solutions.rs  xml_extensions.rs
csprojtool/src/sln/: file.rs  types.rs
xml/src/: escape.rs
