[package]
name = "csprojtool"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
globset = "0.4.6"
ignore = "0.4.17"
roxmltree = { version = "0.14.0", features = [ "std" ] }
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"
tempfile = "3.2.0"
xmltree = { version = "0.10.3", features = [ "attribute-order" ] }
regex = "1.5.4"
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[profile.dev]
opt-level = 1